[gd_scene load_steps=3 format=3 uid="uid://c0nkiv6avxxuu"]

[ext_resource type="Script" path="res://src/AxChampion/static_button_area.gd" id="1_0bdnv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r55r3"]
size = Vector2(5, 30)

[node name="StaticButtonArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_0bdnv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_r55r3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
